[package]
name = "content-types"
version = "1.0.0"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
edition = "2021"
description = "Content types, for web server programming"
repository = "https://github.com/randomairborne/content-types"
license-file = "LICENSE.txt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
