[package]
name = "content_types"
version = "1.0.1"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
edition = "2021"
description = "Content types, for web server programming"
repository = "https://github.com/randomairborne/content-types"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["content-types", "webserver"]
categories = ["web-programming", "web-programming::http-server"]
